More login modules, convert subset of SPNEGO config into properties.